# homebrew-ConorSheehan1

./: .gitignore  .rubocop.yml  Gemfile  README.md  dev.md  osxdocker.rb  pyproject.toml  shot.rb  versions.yaml
.githooks/: install.py  pre-commit
.github/workflows/: ci.yml  release.yml
Formula/: osxdocker.rb  shot.rb  uhabits-converter.rb
scripts/: dev.md  generate_readme_table.rb  pyproject.toml  readme_yaml_cli.rb
spec/: osxdocker_spec.rb  shot_spec.rb  uhabits_converter_spec.rb
