[tool.poetry]
name = "homebrew-conorsheehan1"
version = "0.1.0"
description = ""
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.6"
homebrew-pypi-poet = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
