[tool.poetry]
name = "homebrew-conorsheehan1"
version = "0.1.0"
description = ""
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.6"
homebrew-pypi-poet = "^0.10.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.7.0"

[tool.taskipy.tasks]
# https://github.com/python-poetry/poetry/issues/241
# dev scripts
install_hooks = "python ../.githooks/install.py"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"
